WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306130
AX: VoiceOver isn't able to access aria-owned rows and their cells in grids / tables
https://bugs.webkit.org/show_bug.cgi?id=306130
Summary
AX: VoiceOver isn't able to access aria-owned rows and their cells in grids /...
Tyler Wilcock
Reported
2026-01-23 10:48:09 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-23 10:48:15 PST
<
rdar://problem/168770938
>
Tyler Wilcock
Comment 2
2026-01-25 07:21:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57205
EWS
Comment 3
2026-02-23 16:39:53 PST
Committed
308087@main
(cab0b7e28656): <
https://commits.webkit.org/308087@main
> Reviewed commits have been landed. Closing PR #57205 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug